supported parameter sets, aliases