@@ -25,53 +25,61 @@
  * @test
  * @modules java.base/sun.security.x509
  *          java.base/sun.security.provider
+ * @library /test/lib
  */
+import jdk.test.lib.Asserts;
+import jdk.test.lib.Utils;
 import sun.security.provider.NamedKeyFactory;
 import sun.security.provider.NamedKeyPairGenerator;
 import sun.security.x509.NamedX509Key;
 
 import java.security.*;
+import java.security.spec.AlgorithmParameterSpec;
 import java.security.spec.NamedParameterSpec;
 import java.security.spec.X509EncodedKeySpec;
-import java.util.HexFormat;
 
-// java --add-exports java.base/sun.security.provider=ALL-UNNAMED --add-exports java.base/sun.security.x509=ALL-UNNAMED NamedKeyFactoryTest.java
 public class NamedKeyFactoryTest {
     public static void main(String[] args) throws Exception {
         Security.addProvider(new ProviderImpl());
 
-        var k = new NamedX509Key("sHa", "shA-256", new byte[2]);
+        var k = new NamedX509Key("sHa", "SHA-256", new byte[2]);
         var kf = KeyFactory.getInstance("ShA");
 
-        v(k.getEncoded());
-        v(k.getRawBytes());
-        System.out.println(k.getAlgorithm());
-        System.out.println(k.getFormat());
-        System.out.println(k.getParams().getName());
+        Asserts.assertTrue(k.getAlgorithm().equalsIgnoreCase("SHA"));
+        Asserts.assertEquals(k.getFormat(), "X.509");
+        Asserts.assertEquals(k.getParams().getName(), "SHA-256");
+
         var spec = kf.getKeySpec(k, X509EncodedKeySpec.class);
-        v(spec.getEncoded());
-        v(kf.generatePublic(spec).getEncoded());
+        Asserts.assertEquals(kf.generatePublic(spec).getAlgorithm(), "SHA");
 
-        var kf2 = KeyFactory.getInstance("Sha256");
-        var pk = new PublicKey() {
-            @Override
-            public String getAlgorithm() {
-                return "SHA";
-            }
+        var kf2 = KeyFactory.getInstance("Sha-256");
+        var kf5 = KeyFactory.getInstance("Sha-512");
 
-            @Override
-            public String getFormat() {
-                return "RAW";
-            }
-
-            @Override
-            public byte[] getEncoded() {
-                return new byte[2];
-            }
+        var pk1 = new PublicKey() {
+            public String getAlgorithm() { return "SHA"; }
+            public String getFormat() { return "RAW"; }
+            public byte[] getEncoded() { return new byte[2]; }
         };
-        v(kf2.translateKey(pk).getEncoded());
+        var pk2 = new PublicKey() {
+            public String getAlgorithm() { return "sHA-256"; }
+            public String getFormat() { return "RAW"; }
+            public byte[] getEncoded() { return new byte[2]; }
+        };
+        var pk3 = new PublicKey() {
+            public String getAlgorithm() { return "SHA"; }
+            public String getFormat() { return "RAW"; }
+            public byte[] getEncoded() { return new byte[2]; }
+            public AlgorithmParameterSpec getParams() { return new NamedParameterSpec("sHA-256"); }
+        };
 
-        System.out.println("KPG");
+        Asserts.assertTrue(kf2.translateKey(pk1).toString().contains("SHA-256"));
+        Asserts.assertTrue(kf.translateKey(pk2).toString().contains("SHA-256"));
+        Asserts.assertTrue(kf.translateKey(pk3).toString().contains("SHA-256"));
+
+        Utils.runAndCheckException(() -> kf.translateKey(pk1), InvalidKeyException.class);
+        Utils.runAndCheckException(() -> kf5.translateKey(pk2), InvalidKeyException.class);
+        Utils.runAndCheckException(() -> kf5.translateKey(pk3), InvalidKeyException.class);
+
         var kpg = KeyPairGenerator.getInstance("SHA");
         try {
             kpg.generateKeyPair();
@@ -79,51 +87,47 @@ public class NamedKeyFactoryTest {
         } catch (IllegalStateException e) {
             // good
         }
-        kpg.initialize(new NamedParameterSpec("SHA256"));
-        v(kpg.generateKeyPair().getPublic().getEncoded());
-        kpg.initialize(new NamedParameterSpec("SHA512"));
-        v(kpg.generateKeyPair().getPublic().getEncoded());
+        kpg.initialize(new NamedParameterSpec("ShA-256"));
+        Asserts.assertTrue(kpg.generateKeyPair().getPublic().toString().contains("SHA-256"));
+        kpg.initialize(new NamedParameterSpec("SHa-512"));
+        Asserts.assertTrue(kpg.generateKeyPair().getPublic().toString().contains("SHA-512"));
 
-        var kpg1 = KeyPairGenerator.getInstance("SHA256");
-        v(kpg1.generateKeyPair().getPublic().getEncoded());
+        var kpg1 = KeyPairGenerator.getInstance("ShA-256");
+        Asserts.assertTrue(kpg1.generateKeyPair().getPublic().toString().contains("SHA-256"));
 
-        var kpg2 = KeyPairGenerator.getInstance("SHA512");
-        v(kpg2.generateKeyPair().getPublic().getEncoded());
-    }
-
-    static void v(byte[] bb) {
-        System.out.println(HexFormat.ofDelimiter(":").formatHex(bb));
+        var kpg2 = KeyPairGenerator.getInstance("sHA-512");
+        Asserts.assertTrue(kpg2.generateKeyPair().getPublic().toString().contains("SHA-512"));
     }
 
     public static class ProviderImpl extends Provider {
         public ProviderImpl() {
             super("P", "1", "...");
             put("KeyFactory.SHA", KF.class.getName());
-            put("KeyFactory.SHA256", KF1.class.getName());
-            put("KeyFactory.SHA512", KF2.class.getName());
+            put("KeyFactory.SHA-256", KF1.class.getName());
+            put("KeyFactory.SHA-512", KF2.class.getName());
             put("KeyPairGenerator.SHA", KPG.class.getName());
-            put("KeyPairGenerator.SHA256", KPG1.class.getName());
-            put("KeyPairGenerator.SHA512", KPG2.class.getName());
+            put("KeyPairGenerator.SHA-256", KPG1.class.getName());
+            put("KeyPairGenerator.SHA-512", KPG2.class.getName());
         }
     }
     public static class KF extends NamedKeyFactory {
         public KF() {
-            super("SHA", null);
+            super("SHA", "SHA-256", "SHA-512");
         }
     }
     public static class KF1 extends NamedKeyFactory {
         public KF1() {
-            super("SHA", "SHA256");
+            super("SHA", "SHA-256");
         }
     }
     public static class KF2 extends NamedKeyFactory {
         public KF2() {
-            super("SHA", "SHA512");
+            super("SHA", "SHA-512");
         }
     }
     public static class KPG extends NamedKeyPairGenerator {
         public KPG() {
-            this(null);
+            super("SHA", "SHA-256", "SHA-512");
         }
 
         public KPG(String pname) {
@@ -140,12 +144,12 @@ public class NamedKeyFactoryTest {
     }
     public static class KPG1 extends KPG {
         public KPG1() {
-            super("SHA256");
+            super("SHA-256");
         }
     }
     public static class KPG2 extends KPG {
         public KPG2() {
-            super("SHA512");
+            super("SHA-512");
         }
     }
 }
